<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.benslabbert.fm.gateway</groupId>
  <artifactId>gateway-parent</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <parent>
    <groupId>io.micronaut</groupId>
    <artifactId>micronaut-parent</artifactId>
    <version>3.0.1</version>
  </parent>

  <modules>
    <module>dto</module>
    <module>api-client</module>
    <module>app</module>
  </modules>

  <properties>
    <jdk.version>17</jdk.version>
    <release.version>17</release.version>
    <micronaut.version>3.0.1</micronaut.version>
    <spotless.version>2.13.0</spotless.version>
    <minio.version>8.3.0</minio.version>
    <apache-commons-io.version>2.11.0</apache-commons-io.version>
    <google-java-format.version>1.11.0</google-java-format.version>
    <javax.inject.version>1</javax.inject.version>
    <javax.annotation.version>1.3.2</javax.annotation.version>
    <org.bouncycastle.version>1.69</org.bouncycastle.version>
  </properties>

  <repositories>
    <repository>
      <id>central</id>
      <url>https://repo.maven.apache.org/maven2</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>io.minio</groupId>
      <artifactId>minio</artifactId>
      <version>${minio.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${apache-commons-io.version}</version>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${spotless.version}</version>
        <configuration>
          <formats>
            <format>
              <includes>
                <include>*.md</include>
                <include>.gitignore</include>
              </includes>
              <trimTrailingWhitespace />
              <endWithNewline />
              <indent>
                <tabs>true</tabs>
                <spacesPerTab>4</spacesPerTab>
              </indent>
            </format>
          </formats>
          <java>
            <includes>
              <include>app/src/main/java/**/*.java</include>
              <include>app/src/test/java/**/*.java</include>
              <include>dto/src/main/java/**/*.java</include>
              <include>dto/src/test/java/**/*.java</include>
              <include>api-client/src/main/java/**/*.java</include>
              <include>api-client/src/test/java/**/*.java</include>
            </includes>

            <importOrder />
            <removeUnusedImports />

            <googleJavaFormat>
              <version>${google-java-format.version}</version>
              <style>GOOGLE</style>
            </googleJavaFormat>
          </java>
        </configuration>
        <executions>
          <execution>
            <id>spotless-check</id>
            <phase>compile</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
